--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-httpie>=0.9.0
 # style check
 flake8>=2.5.1,<2.6.0
 pylint>=1.5.3,<1.6.0
@@ -6,3 +5,6 @@ pylint>=1.5.3,<1.6.0
 # test
 nose>=1.3.7,<1.4.0
 coverage>=4.0.3,<4.1.0
+
+# dev
+ipython
