--- a/docker-compose.py34.yml
+++ b/docker-compose.py34.yml
@@ -6,28 +6,28 @@ services:
     container_name: dev_py34_httpie_latest
     build:
       dockerfile: Dockerfile-dev-py34
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py34_httpie_latest_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py34_httpie_latest_develop}
 
   httpie_0_9_8:
     container_name: dev_py34_httpie_0_9_8
     build:
       dockerfile: Dockerfile-dev-py34
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py34_httpie_0_9_8_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py34_httpie_0_9_8_develop}
 
   httpie_0_9_7:
     container_name: dev_py34_httpie_0_9_7
     build:
       dockerfile: Dockerfile-dev-py34
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py34_httpie_0_9_7_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py34_httpie_0_9_7_develop}
 
   httpie_0_8_0:
     container_name: dev_py34_httpie_0_8_0
     build:
       dockerfile: Dockerfile-dev-py34
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py34_httpie_0_8_0_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py34_httpie_0_8_0_develop}
 
   httpie_0_7_2:
     container_name: dev_py34_httpie_0_7_2
     build:
       dockerfile: Dockerfile-dev-py34
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py34_httpie_0_7_2_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py34_httpie_0_7_2_develop}
