--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
         CI_BUILDER: ${CI_BUILDER}
         HTTPie_VERSION: 0.9.9
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py27_httpie_latest_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_latest_develop}
     command: bash -c "./run_qa.sh"
     volumes:
       - .:/opt/app
@@ -35,7 +35,7 @@ services:
         CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
         CI_PROJECT_NAME: ${CI_PROJECT_NAME}
         HTTPie_VERSION: 0.9.8
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py27_httpie_0_9_8_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_9_8_develop}
     command: bash -c "./run_qa.sh"
     volumes:
       - .:/opt/app
@@ -53,7 +53,7 @@ services:
         CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
         CI_PROJECT_NAME: ${CI_PROJECT_NAME}
         HTTPie_VERSION: 0.9.7
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py27_httpie_0_9_7_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_9_7_develop}
     command: bash -c "./run_qa.sh"
     volumes:
       - .:/opt/app
@@ -71,7 +71,7 @@ services:
         CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
         CI_PROJECT_NAME: ${CI_PROJECT_NAME}
         HTTPie_VERSION: 0.8.0
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py27_httpie_0_8_0_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_8_0_develop}
     command: bash -c "./run_qa.sh"
     volumes:
       - .:/opt/app
@@ -89,7 +89,7 @@ services:
         CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
         CI_PROJECT_NAME: ${CI_PROJECT_NAME}
         HTTPie_VERSION: 0.7.2
-    image: ${DOCKER_IMAGE:-teracyhq/httpie-jwt-auth:dev_py27_httpie_0_7_2_develop}
+    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_7_2_develop}
     command: bash -c "./run_qa.sh"
     volumes:
       - .:/opt/app
