--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
         CI_BUILD_TIME: ${CI_BUILD_TIME}
         CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
         CI_PROJECT_NAME: ${CI_PROJECT_NAME}
+        CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
+        CI_BUILDER: ${CI_BUILDER}
         HTTPie_VERSION: 0.9.8
     image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_9_8_develop}
     command: bash -c "./run_qa.sh"
@@ -52,6 +54,8 @@ services:
         CI_BUILD_TIME: ${CI_BUILD_TIME}
         CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
         CI_PROJECT_NAME: ${CI_PROJECT_NAME}
+        CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
+        CI_BUILDER: ${CI_BUILDER}
         HTTPie_VERSION: 0.9.7
     image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_9_7_develop}
     command: bash -c "./run_qa.sh"
@@ -70,6 +74,8 @@ services:
         CI_BUILD_TIME: ${CI_BUILD_TIME}
         CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
         CI_PROJECT_NAME: ${CI_PROJECT_NAME}
+        CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
+        CI_BUILDER: ${CI_BUILDER}
         HTTPie_VERSION: 0.8.0
     image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_8_0_develop}
     command: bash -c "./run_qa.sh"
@@ -88,6 +94,8 @@ services:
         CI_BUILD_TIME: ${CI_BUILD_TIME}
         CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
         CI_PROJECT_NAME: ${CI_PROJECT_NAME}
+        CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
+        CI_BUILDER: ${CI_BUILDER}
         HTTPie_VERSION: 0.7.2
     image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_7_2_develop}
     command: bash -c "./run_qa.sh"
