@ #3 | should not require colon character on --auth
- should have integration tests #20
- support HTTPie >= 0.9.7 now

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,34 +6,22 @@ env:
   - IMG_TAG=dev_py27_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml"                            DOCKER_COMPOSE_SERVICE=httpie_latest
   - IMG_TAG=dev_py27_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml"                            DOCKER_COMPOSE_SERVICE=httpie_0_9_8
   - IMG_TAG=dev_py27_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml"                            DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=dev_py27_httpie_0_8_0     DOCKER_COMPOSE_FILE="docker-compose.yml"                            DOCKER_COMPOSE_SERVICE=httpie_0_8_0
-  - IMG_TAG=dev_py27_httpie_0_7_2     DOCKER_COMPOSE_FILE="docker-compose.yml"                            DOCKER_COMPOSE_SERVICE=httpie_0_7_2
   - IMG_TAG=dev_py33_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py33.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
   - IMG_TAG=dev_py33_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py33.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
   - IMG_TAG=dev_py33_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py33.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=dev_py33_httpie_0_8_0     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py33.yml" DOCKER_COMPOSE_SERVICE=httpie_0_8_0
-  - IMG_TAG=dev_py33_httpie_0_7_2     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py33.yml" DOCKER_COMPOSE_SERVICE=httpie_0_7_2
   - IMG_TAG=dev_py34_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py34.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
   - IMG_TAG=dev_py34_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py34.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
   - IMG_TAG=dev_py34_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py34.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=dev_py34_httpie_0_8_0     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py34.yml" DOCKER_COMPOSE_SERVICE=httpie_0_8_0
-  - IMG_TAG=dev_py34_httpie_0_7_2     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py34.yml" DOCKER_COMPOSE_SERVICE=httpie_0_7_2
   - IMG_TAG=dev_py35_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py35.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
   - IMG_TAG=dev_py35_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py35.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
   - IMG_TAG=dev_py35_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py35.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=dev_py35_httpie_0_8_0     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py35.yml" DOCKER_COMPOSE_SERVICE=httpie_0_8_0
-  - IMG_TAG=dev_py35_httpie_0_7_2     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py35.yml" DOCKER_COMPOSE_SERVICE=httpie_0_7_2
   - IMG_TAG=dev_py36_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py36.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
   - IMG_TAG=dev_py36_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py36.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
   - IMG_TAG=dev_py36_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py36.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=dev_py36_httpie_0_8_0     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py36.yml" DOCKER_COMPOSE_SERVICE=httpie_0_8_0
-  - IMG_TAG=dev_py36_httpie_0_7_2     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py36.yml" DOCKER_COMPOSE_SERVICE=httpie_0_7_2
   - IMG_TAG=py27_httpie_latest        DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
   - IMG_TAG=py27_httpie_latest-alpine DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_latest-alpine
   - IMG_TAG=py27_httpie_0_9_8         DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
   - IMG_TAG=py27_httpie_0_9_7         DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=py27_httpie_0_8_0         DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_0_8_0
-  - IMG_TAG=py27_httpie_0_7_2         DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_0_7_2
   global:
     DOCKER_COMPOSE_VERSION: 1.11.2
     CI_BUILD_TIME: $(date -u +"%Y-%m-%dT%H:%M:%SZ")
@@ -60,12 +48,15 @@ before_script:
 script:
 - echo "docker-compose -f $DOCKER_COMPOSE_FILE build $DOCKER_COMPOSE_SERVICE"
 - docker-compose -f $DOCKER_COMPOSE_FILE build $DOCKER_COMPOSE_SERVICE
-- if [[ $IMG_TAG == *"dev_"* ]]; then
-    docker-compose -f $DOCKER_COMPOSE_FILE run --rm $DOCKER_COMPOSE_SERVICE make test; fi
+- |
+  if [[ $IMG_TAG == *"dev_"* ]]; then
+    docker-compose -f $DOCKER_COMPOSE_FILE run --rm $DOCKER_COMPOSE_SERVICE pytest --cov=.
+  fi
 after_success:
-- if [[ $DOCKER_COMPOSE_FILE == "docker-compose.yml" && $DOCKER_COMPOSE_SERVICE = "httpie_latest" ]]; then
-    pip install --quiet python-coveralls && docker-compose -f $DOCKER_COMPOSE_FILE run $DOCKER_COMPOSE_SERVICE make report-coverage &&
-    docker container run --rm -v $(pwd):/opt/app -w /opt/app -e TRAVIS_BRANCH=$TRAVIS_BRANCH teracy/python-coveralls ; fi
+- |
+  if [[ $DOCKER_COMPOSE_FILE == "docker-compose.yml" && $DOCKER_COMPOSE_SERVICE = "httpie_latest" ]]; then
+    docker container run --rm -v $(pwd):/opt/app -w /opt/app -e TRAVIS_BRANCH=$TRAVIS_BRANCH teracy/python-coveralls
+  fi
 - docker-compose -f $DOCKER_COMPOSE_FILE run --rm $DOCKER_COMPOSE_SERVICE make check-style
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 - docker image push $DOCKER_IMAGE
