@ #36 | should update CI/CD to test httpie versions >= 1.0.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,62 +2,11 @@ version: '3'
 
 services:
 
-  httpie_latest:
-    container_name: dev_py27_httpie_latest
-    build:
-      context: .
-      dockerfile: Dockerfile-dev
-      args:
-        CI_BUILD_ID: ${CI_BUILD_ID}
-        CI_BUILD_REF: ${CI_BUILD_REF}
-        CI_BUILD_REF_NAME: ${CI_BUILD_REF_NAME}
-        CI_BUILD_TIME: ${CI_BUILD_TIME}
-        CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
-        CI_PROJECT_NAME: ${CI_PROJECT_NAME}
-        CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
-        CI_BUILDER: ${CI_BUILDER}
-        HTTPie_VERSION: 0.9.9
-    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_latest_develop}
+  httpie:
+    image: ${PYTHON_IMAGE:-python:3.8}
+    working_dir: /opt/app
     command: bash -c "./run_qa.sh"
-    volumes:
-      - .:/opt/app
-
-  httpie_0_9_8:
-    container_name: dev_py27_httpie_0_9_8
-    build:
-      context: .
-      dockerfile: Dockerfile-dev
-      args:
-        CI_BUILD_ID: ${CI_BUILD_ID}
-        CI_BUILD_REF: ${CI_BUILD_REF}
-        CI_BUILD_REF_NAME: ${CI_BUILD_REF_NAME}
-        CI_BUILD_TIME: ${CI_BUILD_TIME}
-        CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
-        CI_PROJECT_NAME: ${CI_PROJECT_NAME}
-        CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
-        CI_BUILDER: ${CI_BUILDER}
-        HTTPie_VERSION: 0.9.8
-    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_9_8_develop}
-    command: bash -c "./run_qa.sh"
-    volumes:
-      - .:/opt/app
-
-  httpie_0_9_7:
-    container_name: dev_py27_httpie_0_9_7
-    build:
-      context: .
-      dockerfile: Dockerfile-dev
-      args:
-        CI_BUILD_ID: ${CI_BUILD_ID}
-        CI_BUILD_REF: ${CI_BUILD_REF}
-        CI_BUILD_REF_NAME: ${CI_BUILD_REF_NAME}
-        CI_BUILD_TIME: ${CI_BUILD_TIME}
-        CI_REGISTRY_IMAGE: ${CI_REGISTRY_IMAGE}
-        CI_PROJECT_NAME: ${CI_PROJECT_NAME}
-        CI_BUILD_NUMBER: ${CI_BUILD_NUMBER}
-        CI_BUILDER: ${CI_BUILDER}
-        HTTPie_VERSION: 0.9.7
-    image: ${DOCKER_IMAGE:-teracy/httpie-jwt-auth:dev_py27_httpie_0_9_7_develop}
-    command: bash -c "./run_qa.sh"
+    environment:
+      HTTPie_VERSION: ${HTTPie_VERSION:-2.0.0}
     volumes:
       - .:/opt/app
