--- a/.travis.yml
+++ b/.travis.yml
@@ -1,62 +1,58 @@
-sudo: required
 services:
   - docker
+
 env:
   matrix:
-  - IMG_TAG=dev_py27_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml"                            DOCKER_COMPOSE_SERVICE=httpie_latest
-  - IMG_TAG=dev_py27_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml"                            DOCKER_COMPOSE_SERVICE=httpie_0_9_8
-  - IMG_TAG=dev_py27_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml"                            DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=dev_py34_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py34.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
-  - IMG_TAG=dev_py34_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py34.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
-  - IMG_TAG=dev_py34_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py34.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=dev_py35_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py35.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
-  - IMG_TAG=dev_py35_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py35.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
-  - IMG_TAG=dev_py35_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py35.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=dev_py36_httpie_latest    DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py36.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
-  - IMG_TAG=dev_py36_httpie_0_9_8     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py36.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
-  - IMG_TAG=dev_py36_httpie_0_9_7     DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.py36.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  - IMG_TAG=py27_httpie_latest        DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_latest
-  - IMG_TAG=py27_httpie_latest-alpine DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_latest-alpine
-  - IMG_TAG=py27_httpie_0_9_8         DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_8
-  - IMG_TAG=py27_httpie_0_9_7         DOCKER_COMPOSE_FILE="docker-compose.yml -f docker-compose.prod.yml" DOCKER_COMPOSE_SERVICE=httpie_0_9_7
-  global:
-    DOCKER_COMPOSE_VERSION: 1.11.2
-    CI_BUILD_TIME: $(date -u +"%Y-%m-%dT%H:%M:%SZ")
-    CI_BUILD_ID: $TRAVIS_BUILD_ID
-    CI_BUILD_REF: $TRAVIS_COMMIT
-    CI_BUILD_REF_NAME: $TRAVIS_BRANCH
-    CI_BUILD_NUMBER: $TRAVIS_BUILD_NUMBER
-    CI_BUILDER: travis-ci
-    CI_PROJECT_NAME: $TRAVIS_REPO_SLUG
+  - HTTPie_VERSION=2.0.0  PYTHON_IMAGE=python:3.8
+  - HTTPie_VERSION=2.0.0  PYTHON_IMAGE=python:3.7
+  - HTTPie_VERSION=2.0.0  PYTHON_IMAGE=python:3.6
+  - HTTPie_VERSION=2.0.0  PYTHON_IMAGE=python:3.6
+
+  - HTTPie_VERSION=1.0.3  PYTHON_IMAGE=python:3.8
+  - HTTPie_VERSION=1.0.3  PYTHON_IMAGE=python:3.7
+  - HTTPie_VERSION=1.0.3  PYTHON_IMAGE=python:3.6
+  - HTTPie_VERSION=1.0.3  PYTHON_IMAGE=python:3.5
+  - HTTPie_VERSION=1.0.3  PYTHON_IMAGE=python:3.4
+  - HTTPie_VERSION=1.0.3  PYTHON_IMAGE=python:3.3
+  - HTTPie_VERSION=1.0.3  PYTHON_IMAGE=python:2.7
+
+  - HTTPie_VERSION=1.0.2  PYTHON_IMAGE=python:3.8
+  - HTTPie_VERSION=1.0.2  PYTHON_IMAGE=python:3.7
+  - HTTPie_VERSION=1.0.2  PYTHON_IMAGE=python:3.6
+  - HTTPie_VERSION=1.0.2  PYTHON_IMAGE=python:3.5
+  - HTTPie_VERSION=1.0.2  PYTHON_IMAGE=python:3.4
+  - HTTPie_VERSION=1.0.2  PYTHON_IMAGE=python:3.3
+  - HTTPie_VERSION=1.0.2  PYTHON_IMAGE=python:2.7
+
+  - HTTPie_VERSION=1.0.1  PYTHON_IMAGE=python:3.8
+  - HTTPie_VERSION=1.0.1  PYTHON_IMAGE=python:3.7
+  - HTTPie_VERSION=1.0.1  PYTHON_IMAGE=python:3.6
+  - HTTPie_VERSION=1.0.1  PYTHON_IMAGE=python:3.5
+  - HTTPie_VERSION=1.0.1  PYTHON_IMAGE=python:3.4
+  - HTTPie_VERSION=1.0.1  PYTHON_IMAGE=python:3.3
+  - HTTPie_VERSION=1.0.1  PYTHON_IMAGE=python:2.7
+
+  - HTTPie_VERSION=1.0.0  PYTHON_IMAGE=python:3.8
+  - HTTPie_VERSION=1.0.0  PYTHON_IMAGE=python:3.7
+  - HTTPie_VERSION=1.0.0  PYTHON_IMAGE=python:3.6
+  - HTTPie_VERSION=1.0.0  PYTHON_IMAGE=python:3.5
+  - HTTPie_VERSION=1.0.0  PYTHON_IMAGE=python:3.4
+  - HTTPie_VERSION=1.0.0  PYTHON_IMAGE=python:3.3
+  - HTTPie_VERSION=1.0.0  PYTHON_IMAGE=python:2.7
+  # global:
+  #   DOCKER_COMPOSE_VERSION: 1.25.4
 before_install:
   # install the latest docker and docker-compose versions
-  - sudo apt-get remove docker docker-engine
-  - sudo curl -sSL https://get.docker.com/ | sh
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
+  # - sudo apt-get remove docker docker-engine
+  # - sudo curl -sSL https://get.docker.com/ | sh
+  # - sudo rm /usr/local/bin/docker-compose
+  # - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  # - chmod +x docker-compose
+  # - sudo mv docker-compose /usr/local/bin
   - docker --version
   - docker-compose --version
-before_script:
-- export CI_REGISTRY_IMAGE=$DOCKER_USER/${IMG_REPO_PREFIX}$IMG_REPO
-- export IMG_TAG_AFFIX=`if [ "$TRAVIS_BRANCH" != "master" ]; then echo "_${TRAVIS_BRANCH}" | sed -e 's/[\/]/-/g' | sed -e 's/[\#]//g'; fi`
-- export DOCKER_IMAGE=$CI_REGISTRY_IMAGE:$IMG_TAG$IMG_TAG_AFFIX
 script:
-- echo "docker-compose -f $DOCKER_COMPOSE_FILE build $DOCKER_COMPOSE_SERVICE"
-- docker-compose -f $DOCKER_COMPOSE_FILE build $DOCKER_COMPOSE_SERVICE
-- |
-  if [[ $IMG_TAG == *"dev_"* ]]; then
-    docker-compose -f $DOCKER_COMPOSE_FILE run --rm $DOCKER_COMPOSE_SERVICE pytest --cov=.
-  fi
-after_success:
-- |
-  if [[ $DOCKER_COMPOSE_FILE == "docker-compose.yml" && $DOCKER_COMPOSE_SERVICE = "httpie_latest" ]]; then
-    docker container run --rm -v $(pwd):/opt/app -w /opt/app -e TRAVIS_BRANCH=$TRAVIS_BRANCH teracy/python-coveralls
-  fi
-- docker-compose -f $DOCKER_COMPOSE_FILE run --rm $DOCKER_COMPOSE_SERVICE make check-style
-- docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-- docker image push $DOCKER_IMAGE
+  - docker-compose up
 notifications:
   slack:
     on_success: change
